// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Fixed schedules accordion tests clicking on delete icon should open delete confirm modal 1`] = `
<div
  class="Accordion--summary"
  data-testid="fixedSchedules-summary"
>
  <div
    class="Accordion--label"
  >
    2 ce.co.autoStoppingRule.configuration.step4.tabs.schedules.title
  </div>
  <div
    class="Accordion--chevron"
  />
</div>
`;

exports[`Fixed schedules accordion tests clicking on edit icon should open fixed schedule form modal 1`] = `
<div
  class="Accordion--summary"
  data-testid="fixedSchedules-summary"
>
  <div
    class="Accordion--label"
  >
    2 ce.co.autoStoppingRule.configuration.step4.tabs.schedules.title
  </div>
  <div
    class="Accordion--chevron"
  />
</div>
`;

exports[`Fixed schedules accordion tests render schedule accordion while schedules are loading 1`] = `
<div>
  <div
    class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-justifyContent-center StyledProps--flex-alignItems-center"
  >
    <span
      class="bp3-icon StyledProps--main"
      data-icon="loading"
    >
      <svg
        height="16"
        viewBox="0 0 10 8"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          fill="currentColor"
          r="1"
          transform="translate(2 4)"
        >
          <animatetransform
            additive="sum"
            attributeName="transform"
            begin="0s"
            dur="1s"
            repeatCount="indefinite"
            type="scale"
            values="0; 1.25; 0"
          />
        </circle>
        <circle
          fill="currentColor"
          r="1"
          transform="translate(5 4)"
        >
          <animatetransform
            additive="sum"
            attributeName="transform"
            begin="0.2s"
            dur="1s"
            repeatCount="indefinite"
            type="scale"
            values="0; 1.25; 0"
          />
        </circle>
        <circle
          fill="currentColor"
          r="1"
          transform="translate(8 4)"
        >
          <animatetransform
            additive="sum"
            attributeName="transform"
            begin="0.4s"
            dur="1s"
            repeatCount="indefinite"
            type="scale"
            values="0; 1.25; 0"
          />
        </circle>
      </svg>
    </span>
  </div>
</div>
`;

exports[`Fixed schedules accordion tests render schedule accordion with 0 schedules 1`] = `<div />`;

exports[`Fixed schedules accordion tests render schedule accordion with 1 schedule 1`] = `
<div>
  <div
    class="Accordion--accordion serviceAccordionContainer"
  >
    <div
      class="Accordion--panel"
      data-open="false"
      data-testid="fixedSchedules-panel"
    >
      <div
        class="Accordion--summary"
        data-testid="fixedSchedules-summary"
      >
        <div
          class="Accordion--label"
        >
          1 ce.co.autoStoppingRule.configuration.step4.tabs.schedules.fixedSchedule
        </div>
        <div
          class="Accordion--chevron"
        />
      </div>
      <div
        class="bp3-collapse Accordion--collapse"
      >
        <div
          aria-hidden="false"
          class="bp3-collapse-body"
          style="transform: translateY(-undefinedpx);"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Fixed schedules accordion tests render schedule accordion with 2 schedules 1`] = `
<div>
  <div
    class="Accordion--accordion serviceAccordionContainer"
  >
    <div
      class="Accordion--panel"
      data-open="false"
      data-testid="fixedSchedules-panel"
    >
      <div
        class="Accordion--summary"
        data-testid="fixedSchedules-summary"
      >
        <div
          class="Accordion--label"
        >
          2 ce.co.autoStoppingRule.configuration.step4.tabs.schedules.title
        </div>
        <div
          class="Accordion--chevron"
        />
      </div>
      <div
        class="bp3-collapse Accordion--collapse"
      >
        <div
          aria-hidden="false"
          class="bp3-collapse-body"
          style="transform: translateY(-undefinedpx);"
        />
      </div>
    </div>
  </div>
</div>
`;
